Added an Introduction and Abstract. Started a separate section for the theory exposition.

--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -17,15 +17,14 @@
 \maketitle
 
 \begin{abstract}
-    \lipsum
+    In this experiment, we study the X-ray emission lines production and verify Moseley's Law by measuring the energy of emission lines series in several metals. Then, we use spectroscopy to report on the composition of different samples: two semiconductors, several unlabelled alloys and international metal coins provided in the laboratory. We give results for the mass ratios of the unlabelled alloys. We also find that most coins are either Ni-Cu or Cu-Zn alloys and expand on the reasons behind this choice.
 \end{abstract}
 
 \section{Introduction}
+X-rays are an important experimental tool and have been for more than a 100 years now ever since their discovery by the Nobel Prize winning experiment by Wilhelm R\"{o}ntgen. They are currently employed in scattering setups by both by scientists in their study of materials as well as medicine in scanning apparatus. In this experiment, we first study the theoretical basis of X-ray production first developed by Moseley. We measure the energy of the \Kalpha and \Lalpha emission lines series of several samples of known elements with known atomic number $Z$ to verify Moseley's Law. Having established the uniqueness of X-ray emission lines for a given $Z$, we use it to study the composition of several samples provided to us in the laboratory by measuring their emission spectra when exposed to a continuous X-ray source. We begin by independently confirming the composition of two semiconductor samples observed in the non-mini-project part of the experiment. Then, we report on the composition of some unlabelled metal alloys and the relative mass ratios of the samples. Finally, we report on the composition of an array of international coins provided in the laboratory and expand more on the reasoning for the mainly Ni-Cu-Zn composition.
 
-X-rays are an important experimental tool and have been for more than a 100 years now --- from the first Nobel Prize for their discovery, and still now. In this experiment, we will first verify Moseley's Law, and then use X-ray spectroscopy to analyse several samples of metal as well as coins from various places around the world.\reminder{finish this intro at the end.}
-
-First, we introduce some of the background theory behind X-rays and their production.
-
+\section{Theory}
+We begin by introducing some of the background theory behind X-rays and their production.
 \subsection{X-ray atomic spectra}
 The emission spectra of atoms is due to energy transition of shell electrons from a higher energy level to a lower energy level. We are interested in X-rays specifically, which are due to transitions in the inner electron levels of high-$Z$ atoms. These are shielded from the outer electron layers and are mostly unaffected by the chemical structure of the sample i.e. by the surrounding atoms. Therefore, we can take an energy level of an electron to be $E_n = -\rydberg\left(Z\right) / n^2$ where $\rydberg \left(Z\right)= \rydberg_\infty \left(Z - b\right)^2$ is the modified Rydberg constant for a given $Z$, $b$ is some parameter depending on atom, and $\rydberg_\infty$ is the hydrogen Rydberg constant. Then, the energy of an emitted photon by a transition from level $n_\mathrm{i}$ to $n_\mathrm{f}$ is given by:
 \begin{equation}\label{eqn:x-ray-energy}
